src/objects/StudentS3Link__c.object
<CustomObject>
    <description>Custom object to manage URL links to the Amazon S3 storage cloud</description>
    <fields>
        <fullName>Caption__c</fullName>
        <description>Display caption for the file, if any</description>
        <inlineHelpText>Enter a display caption for the file, if any.</inlineHelpText>
        <label>Caption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StudentAttributes__c</fullName>
        <label>Student Attributes</label>
        <referenceTo>StudentAttributes__c</referenceTo>
        <relationshipLabel>Amazon S3 Links</relationshipLabel>
        <relationshipName>AmazonS3Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>URL of S3 file</description>
        <inlineHelpText>Enter the URL of the S3 file resource</inlineHelpText>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Student S3 Link</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Link Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student S3 Links</pluralLabel>
    <recordTypes>
        <fullName>InspireMeImage</fullName>
        <active>true</active>
        <description>Indicting the image is for display on the student&apos;s profile under the &apos;what inspires me&apos; header</description>
        <label>InspireMeImage</label>
    </recordTypes>
    <recordTypes>
        <fullName>ProfessionalPhoto</fullName>
        <active>true</active>
        <description>Indicating the file is the student&apos;s professional photo submission</description>
        <label>ProfessionalPhoto</label>
    </recordTypes>
    <recordTypes>
        <fullName>Resume</fullName>
        <active>true</active>
        <description>Indicating the file is the student&apos;s professional resume submission</description>
        <label>Resume</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>